--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "scripts": {
     "ui": "node --no-warnings package/index.js"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "typescript": "^4.7.4"
   }
 }
